
# 0,1,0,20201221
	Additional Primitives are create from search box (Search for 'Create' then choose the type).
	Additional Primitives are create from python Script (https://github.com/NevilArt/BsMax_2_80/wiki/bpy.ops.object.create).

# 0,1,0,20201216
	Create empty frame for using as joysticks border added for 'Joystic Creator'.
	'Ctrl + RMB' Select extended in max mode works better now.

# 0,1,0,20201215
	'Attach' tool collaps target objects modifiers before join. (for now works only for Mesh objects)

# 0,1,0,20201213
	Smart loop/ring tools from 'maxivz_tools' addon updated.
	'Convert to' and 'Join Plus' tools updated to 'No Mercy' mode (Modifier apply, Make unique, clear primitives data).
	'Join Plus' issue with armature objects fixed.
	New 'pose.select_hierarchy_plus' tool select child/parent in pose mode better than original one.
	'Ctrl + L' do 'Attribute link' if object selected do 'Light toggle' if not obj selected (Max Mode)
	Node editor 'Zoom extended' error on empty node editor has fixed ('Z' in max mode).
	Joystick connector status check updated to avoid displaying error messages.
	'Detach' command in quad menu issue fixed and now it works.

# 0,1,0,20201206
	Undo issue fixed for most of the Operators.
	"DoublClick" and "Ctrl+DoubleClick" for select children in object mode (Max mode)

# 0,1,0,20201126
	Accidentally created tiny primitives removing automatically.
	Undo for Create primitives remove only the last one.

# 0,1,0,20201122
	Refine tool added (insert vertex on clicked point in curves) (Curve edit mode: menu: Segment/ Refine)
	In Quad Menu Move, Rotate, Scale Setting buttion action issue fixed.
	Align Object added to menu: Object/Transform/Align Objects(BsMax).
	Hide/Unhide issue in Quad Menu fixed.

# 0,1,0,20201117
	Max like selection key map added for particle edit mode(Max mode only).
	Hair guide from curve step_key counts issue fixed.
	Node editor 3DsMax like selection short keys (Max mode only).