@@ -1,4 +1,13 @@
 
+# 0,1,0,20201227
+	Delete_plus for object mode keep children transform on parent delete. ('Delete' Max mode)
+	1,2,3 disabled for non converted primitive objects.
+	Link_to operator issue with transformed parent Re-Link to other object fixed.
+	'pose.select_hierarchy_plus' tool replased with 'pose.select_hierarchy' for defult blender mode. ('[' ']' in Blender mode).
+	"DoublClick" select children in Pose mode (Blender mode)
+	Additional object (Mesh,Curve,Text) can attach to bone custome shape in pose mode (works on Rest Positon mode).
+	Transform/Rotation to Zero reset bone for pose mode rather than the armature position.
+
 # 0,1,0,20201221
 	Additional Primitives are create from search box (Search for 'Create' then choose the type).
 	Additional Primitives are create from python Script (https://github.com/NevilArt/BsMax_2_80/wiki/bpy.ops.object.create).
